[package]
name = "ytta"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29.0"
reqwest = { version = "0.12.24", features = [
  "json", "blocking", "cookies", "gzip", "brotli", "deflate", "rustls-tls"
] }
scraper = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
